--- a/nextflow.config
+++ b/nextflow.config
@@ -1,29 +1,25 @@
-params.file = "HG00160.vcf"
-params.script = "tabled.py"
-
-singularity {
-    enabled = true
+params {
+    file = "HG00160.vcf"
 }
 
 profiles {
     singularity {
-        singularity.enabled = true
+        singularity {
+            enabled = true
+            autoMounts = true
+        }
 
         process {
             withName: FILTER {
-                container = 'bcftools_1.21--21573c18b3ab6bcb.sif'
+                container = 'https://depot.galaxyproject.org/singularity/bcftools-gtc2vcf-plugin%3A1.18--h4dfc31f_0'
+                ext.args = '-i \'DP >= 20 && MAPQ >= 40 && FILTER == "PASS"\''
             }
             withName: TABLE {
-                container = 'bcftools_1.21--21573c18b3ab6bcb.sif'
+                container = 'https://depot.galaxyproject.org/singularity/bcftools-gtc2vcf-plugin%3A1.18--h4dfc31f_0'
             }
             withName: PROCESS_TABLE {
-                container = 'python_pandas.sif'
+                container = 'images/python_pandas.sif'
             }
         }
     }
-}
-
-
-singularity {
-    enabled = true
 }
